feat: adds spaghetti maps
